# harmony_rust_sdk

./: .gitignore  .gitmodules  .gitpod.yml  Cargo.toml  README.md  action.yml  build.rs  crates.js  flake.nix  guild_id  index.html  search-index.js  settings.html  shell.nix  source-files.js
assign/: all.html  index.html  macro.assign!.html  macro.assign.html  sidebar-items.js
async_stream/: all.html  index.html  macro.stream.html  macro.try_stream.html
async_stream_impl/: all.html  derive.AsyncStreamHack.html  derive.AsyncTryStreamHack.html  index.html
crates/sdk/: Cargo.toml  build.rs
crates/sdk/src/: lib.rs
crates/sdk/src/api/: auth.rs  chat.rs  emote.rs  harmonytypes.rs  mediaproxy.rs  mod.rs  profile.rs  rest.rs
crates/sdk/src/client/: error.rs  mod.rs  rest.rs
crates/sdk/src/client/api/: auth.rs  mediaproxy.rs  mod.rs  profile.rs  rest.rs
crates/sdk/src/client/api/chat/: channel.rs  invite.rs  mod.rs
examples/: cmd_bot.rs  echo_bot.rs  message_log.rs
examples/message_log/: Cargo.toml  main.rs
futures_util/: all.html  index.html  sidebar-items.js
h2/: struct.Error.html  struct.FlowControl.html  struct.Ping.html  struct.PingPong.html  struct.Pong.html  struct.Reason.html  struct.RecvStream.html  struct.SendStream.html  struct.StreamId.html
harmony_api/: Cargo.toml  build.rs
harmony_build/: Cargo.toml  all.html  index.html  sidebar-items.js  struct.Builder.html  struct.Protocol.html  type.BoxError.html  type.Result.html
harmony_build/src/: client.rs  lib.rs  prost.rs
harmony_client/: Cargo.toml
harmony_client/src/: lib.rs
harmony_client/tests/: all.rs
harmony_derive/: Cargo.toml  all.html  attr.impl_call_action.html  attr.impl_call_req.html  attr.into_request.html  attr.self_builder_with_new.html  derive.builder.html  derive.self_builder.html  derive.self_builder_no_option.html  index.html  macro.impl_call!.html  macro.impl_call.html  macro.impl_into_req_from!.html  macro.impl_into_req_from.html  sidebar-items.js
harmony_derive/src/: impl_call.rs  impl_into_request.rs  impl_self_builder.rs  lib.rs
harmony_rust_sdk/: all.html  index.html  macro.impl_into_req!.html  macro.impl_into_req.html  sidebar-items.js
http/: all.html  index.html
hyper/: struct.Body.html  struct.Error.html  struct.HeaderMap.html  struct.Method.html  struct.Request.html  struct.Response.html  struct.StatusCode.html  struct.Uri.html  struct.Version.html
interop/: Cargo.toml  build.rs
interop/src/: main.rs
itertools/: enum.Either.html
itoa/: all.html  index.html
main/: all.html  constant.EMAIL.html  constant.GUILD_ID_FILE.html  constant.HOMESERVER.html  constant.PASSWORD.html  constant.USERNAME.html  fn.main.html  index.html  sidebar-items.js
net2/: all.html  index.html
nix/: build.nix  common.nix  devShell.nix
paste/: all.html  index.html
pin_project/: all.html  attr.pin_project.html  attr.pinned_drop.html  index.html  trait.UnsafeUnpin.html
pin_project_internal/: all.html  attr.pin_project.html  attr.pinned_drop.html  index.html
prost_types/: all.html  enum.NullValue.html  enum.Syntax.html  index.html  struct.Any.html  struct.Api.html  struct.DescriptorProto.html  struct.Duration.html  struct.Enum.html  struct.EnumDescriptorProto.html  struct.EnumOptions.html  struct.EnumValue.html  struct.EnumValueDescriptorProto.html  struct.EnumValueOptions.html  struct.ExtensionRangeOptions.html  struct.Field.html  struct.FieldDescriptorProto.html  struct.FieldMask.html  struct.FieldOptions.html  struct.FileDescriptorProto.html  struct.FileDescriptorSet.html  struct.FileOptions.html  struct.GeneratedCodeInfo.html  struct.ListValue.html  struct.MessageOptions.html  struct.Method.html  struct.MethodDescriptorProto.html  struct.MethodOptions.html  struct.Mixin.html  struct.OneofDescriptorProto.html  struct.OneofOptions.html  struct.Option.html  struct.ServiceDescriptorProto.html  struct.ServiceOptions.html  struct.SourceCodeInfo.html  struct.SourceContext.html  struct.Struct.html  struct.Timestamp.html  struct.Type.html  struct.UninterpretedOption.html  (+1 more)
rand/: trait.CryptoRng.html  trait.RngCore.html  trait.SeedableRng.html
ring/: all.html
socket2/: all.html  index.html  struct.Domain.html  struct.SockAddr.html  struct.Socket.html  struct.Type.html
src/: lib.rs
src/api/: chat.rs  (+4 more)
syn/: all.html  fn.parse_file.html  index.html  struct.Constraint.html
tests/: all.rs
tokio/: all.html  index.html  sidebar-items.js
tonic/: all.html  attr.async_trait.html  enum.Code.html  index.html  macro.include_proto.html  struct.Interceptor.html  struct.Request.html  struct.Response.html  struct.Status.html  struct.Streaming.html  trait.IntoRequest.html  trait.IntoStreamingRequest.html
tower/: all.html  fn.service_fn.html  index.html  sidebar-items.js  trait.Service.html  trait.ServiceExt.html
tower_balance/: all.html  index.html
tower_buffer/: all.html  index.html  struct.Buffer.html  struct.BufferLayer.html
tower_discover/: all.html  enum.Change.html  index.html  struct.ServiceList.html  struct.ServiceStream.html  trait.Discover.html
tower_layer/: all.html  index.html  struct.Identity.html  struct.Stack.html  trait.Layer.html
tower_limit/: all.html  index.html  struct.ConcurrencyLimit.html  struct.ConcurrencyLimitLayer.html  struct.RateLimit.html  struct.RateLimitLayer.html
tower_load/: all.html  index.html  struct.Constant.html  struct.InstrumentFuture.html  struct.NoInstrument.html  trait.Instrument.html  trait.Load.html
tower_load_shed/: all.html  index.html  struct.LoadShed.html  struct.LoadShedLayer.html
tower_make/: all.html  index.html  trait.MakeConnection.html  trait.MakeService.html
tower_ready_cache/: all.html  index.html
tower_retry/: all.html  index.html  struct.Retry.html  struct.RetryLayer.html  trait.Policy.html
tower_timeout/: all.html  index.html  struct.Timeout.html  struct.TimeoutLayer.html
tower_util/: all.html  enum.Either.html  fn.service_fn.html  index.html  struct.BoxService.html  struct.CallAll.html  struct.CallAllUnordered.html  struct.Oneshot.html  struct.Optional.html  struct.Ready.html  struct.ReadyAnd.html  (+4 more)
(+2813 files in other folders)
