[package]
name = "harmony_build"
version = "0.1.0"
authors = ["Yusuf Bera Ertan <y.bera003.06@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.7"
prost-build = "0.7"
syn = "1.0"
quote = "1.0"
proc-macro2 = "1.0"

[features]
default = ["rustfmt"]
rustfmt = []

[package.metadata.docs.rs]
all-features = true