[package]
name = "harmony_client"
version = "0.1.0"
authors = ["Yusuf Bera Ertan <y.bera003.06@protonmail.com>"]
edition = "2018"
license = "MIT"

[dependencies]
harmony_api = { path = "../harmony_api" }
http = "0.2"
hyper = "0.13"
hyper-rustls = "0.21"

[dev-dependencies]
tokio = { version = "0.2", features = [ "rt-threaded", "macros" ] }
