[package]
name = "harmony_derive"
description = "Proc macros for harmony_rust_sdk. Not meant to be publicly used."
version = "0.1.2"
authors = ["Yusuf Bera Ertan <y.bera003.06@protonmail.com>"]
edition = "2021"
homepage = "https://github.com/harmony-development/harmony_rust_sdk"
repository = "https://github.com/harmony-development/harmony_rust_sdk"
license = "MIT"

[features]
client = []

[lib]
proc-macro = true

[dependencies]
syn = "1.0"
quote = "1.0"
proc-macro2 = "1.0"

[package.metadata.nix]
build = true
library = true