[package]
name = "interop"
version = "0.1.0"
authors = ["Yusuf Bera Ertan <y.bera003.06@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.7"
tokio = { version = "1.1", features = [ "rt", "macros", "fs" ] }
reqwest = { version = "0.11.0", default-features = false, features = [ "rustls-tls-native-roots" ] }
url = "2"

[build-dependencies]
harmony_build = { path = "../harmony_build" }