[package]
name = "harmony_rust_sdk"
version = "0.8.0"
authors = ["Yusuf Bera Ertan <y.bera003.06@protonmail.com>"]
edition = "2021"
license = "MIT"
description = "Rust library to work with the Harmony chat protocol."
repository = "https://github.com/harmony-development/harmony_rust_sdk"
homepage = "https://github.com/harmony-development/harmony_rust_sdk"
keywords = ["harmony", "protocol", "api", "chat", "client"]
categories = ["api-bindings"]
exclude = ["*.nix", "flake.lock", ".github/*"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
prost = "0.9"

derive-new = "0.5"
derive_more = "0.99"
harmony_derive = { version = "0.1.3", path = "../derive" }

http = "0.2"
hrpc = { version = "0.33", default-features = false }
reqwest = { version = "0.11", default-features = false, features = [
	"json",
	"multipart",
], optional = true }
tracing = { version = "0.1", optional = true }
tokio = { version = "1.18", features = ["sync"], optional = true }

valuable = { version = "0.1", features = ["derive"], optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
rkyv = { version = "0.7", optional = true }
bytecheck = { version = "0.6", optional = true }

urlencoding = { version = "2.1", optional = true }

[build-dependencies]
harmony_build = { version = "0.1.0", path = "../build" }

[features]
default = []

# Enable the web WASM client
client_web = ["_client_common", "hrpc/http_wasm_client"]
# Enable the native client (uses `hyper`)
client_native = [
	"_client_common",
	"tokio",
	"hrpc/http_hyper_client",
	"reqwest/rustls-tls-native-roots",
]
# Internal feature used for common client features
_client_common = [
	"gen_auth",
	# Generate client code
	"gen_client",
	"reqwest",
	"tracing",
	"harmony_derive/client",
	"serde",
]
# Enable client backoff feature
client_backoff = []
# Enable recommended protocols that the client implements
client_recommended = [
	"gen_chat",
	"gen_profile",
	"gen_emote",
	"gen_batch",
	"gen_mediaproxy",
	"rest",
]

# Generate client code for communication with the network
gen_client = ["hrpc/client", "harmony_build/client"]
# Generate server code for communication with the network
gen_server = ["hrpc/server", "harmony_build/server"]

# Enable REST API code
rest = ["serde", "urlencoding"]

# Enable generation of an "all permissions" module in `chat`
all_permissions = ["harmony_build/all_permissions"]

# Enables all protocols
gen_all_protocols = ["gen_stable_protocols", "gen_staging_protocols"]

## Stable protocols ##
gen_chat = ["gen_harmonytypes", "gen_profile", "gen_emote"]
gen_auth = ["gen_harmonytypes"]
gen_mediaproxy = ["gen_harmonytypes"]
gen_harmonytypes = []
gen_sync = ["gen_harmonytypes"]
gen_batch = []
gen_profile = []
gen_emote = []
# Enables all stable protocols
gen_stable_protocols = [
	"gen_chat",
	"gen_auth",
	"gen_mediaproxy",
	"gen_harmonytypes",
	"gen_sync",
	"gen_batch",
	"gen_profile",
	"gen_emote",
	"rest",
]

## Staging protocols ##
staging_gen_voice = []
staging_gen_bots = []
# Enables all staging protocols
gen_staging_protocols = ["staging_gen_voice", "staging_gen_bots"]

# Enables rkyv validation and `bytecheck::CheckBytes` derive for Harmony API types
rkyv_validation = ["rkyv/validation", "bytecheck"]
# Enables serde `Deserialize` and `Serialize` derives for Harmony API types
serde_derive = ["serde"]

[package.metadata.nix]
build = true
library = true
